[package]
name = "dynamaze"
version = "0.1.0"
authors = ["Melody Horn <melody@boringcactus.com>"]
edition = "2018"

[features]
server = [
    "actix",
    "actix-rt",
    "actix-web",
    "actix-web-actors",
]

[dependencies]
rand = { version = "0.7.2", features = ["wasm-bindgen"] }
serde = { version = "1.0.103", features = ["derive"] }
bincode = "1.2.1"
futures = "0.3.1"
lazy_static = "1.4.0"
toml = "0.5.5"
gloo = "0.2.0"
wasm-bindgen = "0.2.58"
js-sys = "0.3.35"
console_error_panic_hook = "0.1.6"
actix = { version = "0.9.0", optional = true }
actix-rt = { version = "1.0.0", optional = true }
actix-web = { version = "2.0.0", optional = true }
actix-web-actors = { version = "2.0.0", optional = true }

[dependencies.web-sys]
version = "0.3.35"
features = [
    "Window",
    "Document",
    "Element",
    "Event",
    "Node",
    "HtmlElement",
    "HtmlCanvasElement",
    "MouseEvent",
    "KeyboardEvent",
    "CanvasRenderingContext2d",
    "AudioContext",
    "AudioNode",
    "AudioDestinationNode",
    "AudioParam",
    "HtmlCanvasElement",
    "console",
    "Storage",
    "HtmlAudioElement",
    "HtmlMediaElement",
    "MediaElementAudioSourceNode",
    "GainNode",
    "Response",
    "WebSocket",
    "Location",
    "MessageEvent",
    "BinaryType",
    "EventTarget",
    "HtmlFormElement",
    "HtmlCollection",
    "HtmlInputElement",
    "Text",
]

[[bin]]
name = "server"
required-features = ["server"]
